hero block horizontal scroll prevention

--- a/assets/scss/nhsblocks/style_variations.scss
+++ b/assets/scss/nhsblocks/style_variations.scss
@@ -148,7 +148,7 @@
   max-width: 100%;
   position: relative;
   right: 50%;
-  width: 100vw;
+  width: 100%;
   .wp-block-nhsblocks-heroinner {
     margin-left: -8px;
   }
